# fastapi

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/contexts/assistant/application/: ports.py  summarizer.py
backend/app/contexts/assistant/entrypoints/: __init__.py
backend/app/contexts/assistant/infrastructure/: fake_adapter.py  openai_adapter.py  wikipedia.py
backend/app/contexts/auth/application/: dto.py  ports.py  use_cases.py
backend/app/contexts/auth/domain/: __init__.py
backend/app/contexts/auth/entrypoints/: __init__.py
backend/app/contexts/auth/infrastructure/: repository.py
backend/app/contexts/settings/application/: ports.py  schemas.py  use_cases.py
backend/app/contexts/settings/domain/: __init__.py
backend/app/contexts/settings/entrypoints/: __init__.py
backend/app/contexts/settings/infrastructure/: __init__.py
backend/app/contexts/transactions/application/: ports.py  use_cases.py
backend/app/contexts/transactions/domain/: errors.py  events.py
backend/app/contexts/transactions/entrypoints/: __init__.py
backend/app/contexts/transactions/infrastructure/: event_publisher.py  repository.py  worker.py  ws_stream.py
backend/app/shared/: config.py  db.py  events.py  init_db.py  models.py  redis.py  security.py
backend/migrations/: env.py
docs/: .$arquitectura.drawio.dtmp  arquitectura.drawio  mkdocs.yml
frontend-admin/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
rpa/: Dockerfile  (+2 more)
(+57 files in other folders)
