[project]
name = "resumeai-backend"
version = "0.1.0"
description = "ResumeAI — hexagonal FastAPI backend (books + sales, async RPA+AI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "arq>=0.26,<0.27",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "openai>=1.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8", "pytest-asyncio>=0.23"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
